logging path where the eml is read